ChromeOS: disable ToggleMaximize for login and lock screen.

ChromeOS login and lock screens must be always maximized even on touch devices.

BUG=600756
TEST=none

Review-Url: https://codereview.chromium.org/2013963004
Cr-Commit-Position: refs/heads/master@{#396123}